# ASCIIgL

./: .gitignore  .gitmodules  README.md  _glm_test.cpp  build_commands.txt  build_log.txt  user_instruction_notes.txt
ASCIICraft/: CMakeLists.txt  MODEL_LOADING_PLAN.md
ASCIICraft/docs/: M4_VARIANT_COMPILER.md  coordinate-systems.md
ASCIICraft/include/ASCIICraft/ai/: AIBehaviors.hpp  AIGoal.hpp  Pathfinding.hpp
ASCIICraft/include/ASCIICraft/ecs/: StepTiming.hpp  ViewBobbingMath.hpp
ASCIICraft/include/ASCIICraft/events/: BlockHitEvent.hpp  BreakBlockEvent.hpp  EventBus.hpp  GUIEvents.hpp  InputEvents.hpp  ItemEvents.hpp  ParticleSpawnEvent.hpp  PlaceBlockEvent.hpp  SoundEvents.hpp
ASCIICraft/include/ASCIICraft/game/: Game.hpp
ASCIICraft/include/ASCIICraft/gui/: GUIQuadMeshBuilder.hpp  GUIRenderer.hpp  GUIScreen.hpp  GUISurface.hpp  GUISurfaceLibrary.hpp  GuiItemIcon.hpp  GuiManager.hpp  GuiMaterialCache.hpp  GuiMeshes.hpp  GuiSlotHover.hpp  Panel.hpp  Screen.hpp  Slot.hpp  Widget.hpp
ASCIICraft/include/ASCIICraft/input/: GameplayInputFilter.hpp  IGameInputSource.hpp  IInputSource.hpp  InputSystem.hpp
ASCIICraft/include/ASCIICraft/input_manager/: InputManager.hpp
ASCIICraft/include/ASCIICraft/mobs/: Mobs.hpp  Pig.hpp
ASCIICraft/include/ASCIICraft/player/: Player.hpp
ASCIICraft/include/ASCIICraft/rendering/: BlockTargetOutlineShaders.hpp  BreakOverlayShaders.hpp  DroppedItemShaders.hpp  GUIBlockShaders.hpp  GUIShaders.hpp  GUITextShaders.hpp  HeldItemShaders.hpp  LeafParticleShaders.hpp  MobShaders.hpp  Shaders.hpp  TerrainShaders.hpp
ASCIICraft/include/ASCIICraft/sound/: BlockSoundMap.hpp  SoundRegistry.hpp
ASCIICraft/include/ASCIICraft/textures/: BlockTextureCatalog.hpp  ItemTextureCatalog.hpp  TextureCatalog.hpp
ASCIICraft/include/ASCIICraft/util/: JsonUtil.hpp  MeshBuilderUtil.hpp  QuadMeshBuilder.hpp  RNG.hpp  TimeUtil.hpp  Util.hpp
ASCIICraft/include/ASCIICraft/world/: Block.hpp  Chunk.hpp  ChunkJobQueue.hpp  ChunkManager.hpp  ChunkMeshGen.hpp  ChunkRegion.hpp  Coords.hpp  CrossChunkEdit.hpp  FaceCulling.hpp  Sizes.hpp  TerrainGenerator.hpp  TerrainResult.hpp  World.hpp  WorldDimensions.hpp
ASCIICraft/itch/: description.html  itch-download-instructions.html  tagline.html
ASCIICraft/regions/: r_-1.0.-1  r_-1.0.0  r_0.0.-1  r_0.0.0
ASCIICraft/res/blockstates/: furnace.json
ASCIICraft/res/models/block/: farmland_dry.json  farmland_moist.json  grass_snowed.json  torch.json
ASCIICraft/scripts/: build_debug.ps1  build_fastdebug.ps1  build_release.ps1
ASCIICraft/src/: Game.cpp  main.cpp
ASCIICraft/src/ai/: AIBehaviors.cpp  AIGoal.cpp  Pathfinding.cpp
ASCIICraft/src/ecs/components/: Inventory.cpp
ASCIICraft/src/ecs/data/: ItemIndex.cpp  ItemRegistry.cpp
ASCIICraft/src/ecs/factories/: ItemFactory.cpp  MobFactory.cpp  PlayerFactory.cpp
ASCIICraft/src/ecs/managers/: ItemFactory.cpp  PlayerFactory.cpp  PlayerManager.cpp
ASCIICraft/src/ecs/systems/: BlockTargetSystem.cpp  BreakOverlayRenderSystem.cpp  CameraSystem.cpp  DroppedItemSystem.cpp  EntityRenderSystem.cpp  GUISystem.cpp  HeldItemRenderSystem.cpp  HotbarSystem.cpp  InputSystem.cpp  InventorySystem.cpp  LifetimeSystem.cpp  MobAISystem.cpp  MovementSystem.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  PlayerCombatSystem.cpp  RenderSystem.cpp  SoundSystem.cpp  ViewBobbingSystem.cpp
ASCIICraft/src/events/: EventBus.cpp
ASCIICraft/src/game/: Game.cpp
ASCIICraft/src/gui/: GUIQuadMeshBuilder.cpp  GUIRenderer.cpp  GUIScreen.cpp  GUISurface.cpp  GUISurfaceLibrary.cpp  GuiItemIcon.cpp  GuiManager.cpp  GuiMaterialCache.cpp  GuiMeshes.cpp  Panel.cpp  Screen.cpp  Slot.cpp  Widget.cpp
ASCIICraft/src/gui/screens/: InventoryScreen.cpp  PlayHUDScreen.cpp
ASCIICraft/src/gui/text/: BitmapFont.cpp  Label.cpp  TextLabelMeshBuilder.cpp
ASCIICraft/src/input/: InputSystem.cpp
ASCIICraft/src/input_manager/: InputManager.cpp
ASCIICraft/src/mobs/: Mobs.cpp  Pig.cpp
ASCIICraft/src/player/: Player.cpp
ASCIICraft/src/rendering/: BlockTargetOutlineShaders.cpp  BreakOverlayShaders.cpp  DroppedItemShaders.cpp  GUIBlockShaders.cpp  GUIShaders.cpp  GUITextShaders.cpp  HeldItemShaders.cpp  LeafParticleShaders.cpp  MobShaders.cpp  Shaders.cpp  TerrainShaders.cpp
ASCIICraft/src/rendering/items/: DropItemIconMeshBuilder.cpp  DroppedItemIconMeshBuilder.cpp
ASCIICraft/src/sound/: BlockSoundMap.cpp  RegisterDefaultSounds.cpp  SoundRegistry.cpp
ASCIICraft/src/textures/: BlockTextureCatalog.cpp  ItemTextureCatalog.cpp  TextureCatalog.cpp
ASCIICraft/src/util/: MeshBuilderUtil.cpp  QuadMeshBuilder.cpp
ASCIICraft/src/world/: Block.cpp  BlockTextureCatalog.cpp  Chunk.cpp  ChunkJobQueue.cpp  ChunkManager.cpp  ChunkMeshGen.cpp  ChunkRegion.cpp  FaceCulling.cpp  TerrainGenerator.cpp  World.cpp
ASCIICraft/src/world/block/: BlockBreakData.cpp  FaceCulling.cpp
ASCIICraft/src/world/blockmodels/: BlockModelBaker.cpp  BlockModelLibrary.cpp  (+5 more)
ASCIIgL/: CMakeLists.txt
ASCIIgL/cmake/: ASCIIgLConfig.cmake
ASCIIgL/docs/: FontAtlas-vs-CoverageJSON.md  RenderDoc-CHAR_INFO-buffer.md
ASCIIgL/res/: coverage_cleartype.json
ASCIIgL/scripts/: build_debug.ps1  build_release.ps1  create_distribution.ps1  gen_blue_noise.py
ASCIIgL/src/engine/: Camera2D.cpp  Camera3D.cpp  Clock.cpp  Collision.cpp  FPSClock.cpp  GameObj.cpp  InputManager.cpp  Logger.cpp  Mesh.cpp  MipFilters.cpp  Model.cpp  MonochromeMapping.cpp  Texture.cpp  TextureArray.cpp  TextureLibrary.cpp
ASCIIgL/src/renderer/: HLSLIncludes.cpp  Material.cpp  Palette.cpp  PaletteUtil.cpp  Renderer.cpp  RendererCPU.cpp  RendererGPU.cpp  Renderer_AsciiWindow.cpp  Renderer_Device.cpp  Renderer_Draw.cpp  Renderer_States.cpp  Renderer_Textures.cpp  Screen.cpp  ScreenWinImpl.cpp  Shader.cpp  TileManager.cpp  VertFormat.cpp  Vertex.cpp  VertexShader.cpp  VertexShaderCPU.cpp
ASCIIgL/src/util/: Clock.cpp  CoverageJson.cpp  EventBus.cpp  FontAtlasBuilder.cpp  Logger.cpp  MathUtil.cpp  Profiler.cpp
I_Dont_Wanna_Run_For_Christmas/: CMakeLists.txt
I_Dont_Wanna_Run_For_Christmas/src/: Enemies.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Present.hpp  main.cpp
(+280 files in other folders)
